<resources>
    <string name="add">Add Car</string>
    <string name="addressCreate">Address : </string>
    <string name="address_hint">1 Example lane \n Your Street</string>
    <string name="addCar">Add A Car</string>
    <string name="app_name">Carz</string>
    <string name="appSettings">App Settings</string>
    <string name="carz_title">Carz</string>
    <string name="carImage">Image of the car</string>
    <string name="cancel">Cancel</string>
    <string name="condition">Condition</string>
    <string name="conditionField">Condition : </string>
    <string name="contact">Contact</string>
    <string name="createAccount">Create an account</string>
    <string name="delete">Delete</string>
    <string name="delete_car_message">Are you sure you want to delete this car?</string>
    <string name="delete_car_title">Delete this car?</string>
    <string name="delete_user_message">Are you sure that you want to delete your account?</string>
    <string name="delete_user_title">Delete your account?</string>
    <string name="delete_image_message">Are you sure you want to delete this image?</string>
    <string name="delete_image_title">Delete this image?</string>
    <string name="description">Description</string>
    <string name="descriptionField">Description : </string>
    <string name="edit">Edit</string>
    <string name="email">Email</string>
    <string name="emailCreate">Email : </string>
    <string name="email_hint">example@youremail.com</string>
    <string name="firstNameCreate">First name : </string>
    <string name="firstName_hint">Your first name</string>
    <string name="lastNameCreate">Surname : </string>
    <string name="lastName_hint">Your last name</string>
    <string name="login">Login</string>
    <string name="logOut">Log out</string>
    <string name="log_out_message">Logged-out successfully</string>
    <string name="max">Max : </string>
    <string name="min">Min : </string>
    <string name="makeField">Make : </string>
    <string name="manufacturer_1">BMW</string>
    <string name="manufacturer_2">Opal</string>
    <string name="manufacturer_3">Skoda</string>
    <string name="mileage">Mileage</string>
    <string name="mileageField">Mileage : </string>
    <string name="modelField">Model : </string>
    <string name="my_account">My Account</string>
    <string name="myCars">My Cars</string>
    <string name="or">- OR -</string>
    <string name="pass1_hint">Your password</string>
    <string name="pass2_hint">Re-type your password</string>
    <string name="password">Password</string>
    <string name="passwordCreate">Password :</string>
    <string name="passwordCreate2">Re-type password :</string>
    <string name="priceField">Price :</string>
    <string name="search">Search</string>
    <string name="submit">Submit</string>
    <string name="search_results">Search Results</string>
    <string name="setting_session">session</string>
    <string name="setting_splash">splash</string>
    <string name="settings_splash_option">Disable splash screen on start-up</string>
    <string name="settings_show_my_cars_option">Show my cars in search results</string>
    <string name="telephoneCreate">Telephone : </string>
    <string name="telephone_hint">+41 079 123 45 67</string>
    <string name="typeField">Type : </string>
    <string name="test">Test</string>
    <string name="user">User</string>
    <string name="year">Year</string>
    <string name="yearField">Year : </string>
    <string name="yes">Yes</string>
    <string name="addCarimages">Add image</string>

    <string-array name="type_array">
        <item>Any</item>
        <item>Hatchback</item>
        <item>Sedan</item>
        <item>SUV</item>
        <item>Crossover</item>
        <item>Coupe</item>
        <item>Convertible</item>

    </string-array>
    <integer-array name="type_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </integer-array>

    <string-array name="make_array">
        <item>Any</item>
        <item>Skoda</item>
        <item>BMW</item>
        <item>Opel</item>
        <item>Audi</item>
        <item>VW</item>
        <item>Mercedes-Benz</item>
        <item>Alfa Romeo</item>
        <item>Tesla</item>
        <item>Toyota</item>
        <item>Suzuki</item>
        <item>Subaru</item>
        <item>Porsche</item>
        <item>Mitsubishi</item>
        <item>Kia</item>
        <item>Jeep</item>
        <item>Honda</item>
        <item>Hyundai</item>

    </string-array>
    <integer-array name="make_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
    </integer-array>

    <string-array name="drawer_menu_items">
        <item>My Account</item>
        <item>My Cars</item>
        <item>Settings</item>
        <item>Log-out</item>
    </string-array>

</resources>
