<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="30dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/emailCreate"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/firstNameCreate"/>
    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="text"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/lastNameCreate"/>
    <EditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="text"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/passwordCreate"/>
    <EditText
        android:id="@+id/pass1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPassword"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/passwordCreate2"/>
    <EditText
        android:id="@+id/pass2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPassword"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/addressCreate"/>
    <EditText
        android:id="@+id/address1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textMultiLine"/>
    <EditText
        android:id="@+id/address2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textMultiLine"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/telephoneCreate"
        android:layout_marginTop="15dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="phone"/>
    <Button
        android:id="@+id/telephone"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/submit"/>

</LinearLayout>