<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp">
        <TextView
            android:id="@+id/makeT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/makeField"/>
        <Spinner
            android:id="@id/make_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_below="@id/makeT"/>
        <TextView
            android:id="@+id/typeT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_below="@id/make_spinner"
            android:text="@string/typeField"/>
        <Spinner
            android:id="@+id/type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_below="@id/typeT"/>
        <TextView
            android:id="@+id/yearT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_below="@id/type_spinner"
            android:text="@string/yearField"/>
        <Spinner
            android:id="@+id/year_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_below="@id/yearT" />
        <TextView
            android:id="@+id/modelT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/year_spinner"
            android:textSize="18sp"
            android:text="@string/modelField"/>
        <EditText
            android:id="@+id/model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/modelT"/>
        <TextView
            android:id="@+id/mileageT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_below="@id/model"
            android:text="@string/mileageField"/>
        <EditText
            android:id="@+id/mileage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_below="@id/mileageT"/>
        <TextView
            android:id="@+id/conditionT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mileage"
            android:textSize="18sp"
            android:text="@string/conditionField"/>
        <EditText
            android:id="@+id/condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/conditionT"
            android:inputType="textMultiLine"/>
        <TextView
            android:id="@+id/descriptionT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/condition"
            android:textSize="18sp"
            android:text="@string/descriptionField"/>
        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/descriptionT"
            android:inputType="textMultiLine"/>
        <TextView
            android:id="@+id/priceT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:textSize="18sp"
            android:text="@string/priceField"/>
        <EditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/priceT"
            android:inputType="textMultiLine"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/price"
            android:onClick="addCar"
            android:text="@string/add"/>
    </RelativeLayout>
</ScrollView>