<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">
    <TextView
        android:id="@+id/emailT"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/email"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_centerHorizontal="true"
        android:inputType="textEmailAddress"
        android:layout_below="@id/emailT"/>
    <TextView
        android:id="@+id/passwordT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/email"
        android:text="@string/password"/>
    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/passwordT"/>
    <Button
        android:id="@+id/btn_Login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/password"
        android:layout_marginTop="20dp"
        android:onClick="tryLogin"
        android:text="@string/login"/>
    <TextView
        android:id="@+id/or"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/btn_Login"
        android:text="@string/or"/>
    <Button
        android:layout_width="match_parent"
        android:layout_marginStart="40dp"
        android:layout_height="50dp"
        android:text="@string/createAccount"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/or"
        android:onClick="createUser"/>
</RelativeLayout>