<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="550dp"
android:layout_height="fill_parent" >
    <View
        android:id="@+id/top"
        android:layout_width="wrap_content"
        android:layout_height="20dp"/>
    <TextView
        android:id="@+id/my_cars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/top"
        android:text="@string/myCars"/>
    <View
        android:id="@+id/line_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/my_cars"/>
    <TextView
        android:id="@+id/app_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/line_1"
        android:text="@string/appSettings"/>
    <View
        android:id="@+id/line_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/app_settings"/>
    <TextView
        android:id="@+id/log_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_2"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/logOut"/>
    <View
        android:layout_width="wrap_content"
        android:layout_below="@id/log_out"
        android:layout_height="20dp"/>
</RelativeLayout>