<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_marginStart="10pt"
    android:layout_marginTop="10pt"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:id="@+id/display_mode"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Space
            android:id="@+id/align"
            android:layout_width="20pt"
            android:layout_height="0dp"
            android:layout_marginStart="100dp"/>
        <TextView
            android:id="@+id/first_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstNameCreate"/>
        <TextView
            android:id="@+id/first_name_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/align"
            android:text="@string/test"/>
        <TextView
            android:id="@+id/last_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/first_name_label"
            android:text="@string/lastNameCreate"/>
        <TextView
            android:id="@+id/last_name_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/first_name_edit"
            android:layout_alignEnd="@+id/align"
            android:text="@string/test"/>
        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/last_name_label"
            android:text="@string/test"/>
    </RelativeLayout>
    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/edit_mode"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Space
            android:id="@+id/align_2"
            android:layout_width="20pt"
            android:layout_height="0dp"
            android:layout_marginStart="100dp"/>
        <TextView
            android:id="@+id/first_name_label_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstNameCreate"/>
        <TextView
            android:id="@+id/first_name_edit_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/align_2"
            android:text="@string/test"/>
        <TextView
            android:id="@+id/last_name_label_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/first_name_label_2"
            android:text="@string/lastNameCreate"/>
        <TextView
            android:id="@+id/last_name_edit_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/first_name_edit_2"
            android:layout_alignEnd="@+id/align_2"
            android:text="@string/test"/>
        <TextView
            android:id="@+id/email_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/last_name_label_2"
            android:text="@string/test"/>
        <TextView
            android:id="@+id/password_1_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_2"
            android:text="@string/passwordCreate"
            android:labelFor="@id/password_1_edit"/>
        <EditText
            android:id="@+id/password_1_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/align"
            android:layout_below="@id/email"
            android:inputType="textPassword"/>
        <TextView
            android:id="@+id/password_2_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_1_label"
            android:text="@string/passwordCreate2"
            android:labelFor="@+id/password_2_edit"/>
        <EditText
            android:id="@+id/password_2_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_alignEnd="@id/align"
            android:layout_below="@id/password_1_edit"/>
    </RelativeLayout>

</RelativeLayout>